feature-BJS2-26130: Фандрайзинг для проекта после fix